# claude-social-pipeline

./: NOTICE  README.md  install.sh
mcp/: lib.py  patterns.py  pyproject.toml  server.py
skills/content-humanizer/: SKILL.md
skills/content-humanizer/references/: ai-tells-checklist.md
skills/x-tweet/: SKILL.md
skills/x-tweet/data/: thread_day30.txt
skills/x-tweet/references/: anti-patterns.md  content-calendar.md  engagement-data.md  hashtag-strategy.md  templates.md  voice-rules.md
skills/x-tweet/scripts/: post_tweet.py  tweet_stats.py
